src/test/ui/traits/trait-object-vs-lifetime-2.stderr
error[E0224]: at least one non-builtin trait is required for an object type
  --> $DIR/trait-object-vs-lifetime-2.rs:7:5
   |
LL |     dyn 'static +: 'static + Copy,
   |     ^^^^^^^^^^^^^

error: aborting due to previous error

